# serde-querystring

./: CHANGES.md  Cargo.toml  README.md
.github/workflows/: test.yml
benches/: child.rs  decoded.rs  multilevel.rs  seq.rs  simple.rs  struct.rs
serde-querystring-actix/: Cargo.toml  README.md
serde-querystring-actix/src/: lib.rs
serde-querystring-axum/: Cargo.toml  README.md
serde-querystring-axum/src/: lib.rs
src/: decode.rs  error.rs  lib.rs
src/de/: basis.rs  constants.rs  error.rs  map.rs  mod.rs  pair.rs  parser.rs  seq.rs  slices.rs  stash.rs  traits.rs  value.rs
src/de/stash/: map.rs  mod.rs  seq.rs
src/parsers/: brackets.rs  delimiter.rs  duplicate.rs  mod.rs  separator.rs  simple.rs  urlencoded.rs
tests/: multilevel_ordered.txt  multilevel_unordered.txt  test_brackets.rs  test_de_values.rs  test_delimiter.rs  test_deserialize.rs  test_deserialize_simple.rs  test_deserialize_single.rs  test_deserialize_web.rs  test_duplicate.rs  test_separator.rs  test_simple.rs  test_urlencoded.rs
