[package]
name = "serde-querystring"
version = "0.0.6"
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
description = "A query string deserializer based on serde"
edition = "2018"
readme = "README.md"
repository = "https://github.com/pooyamb/serde-querystring/"
documentation = "https://docs.rs/serde-querystring"
license = "MIT OR Apache-2.0"
keywords = ["serialization", "deserialization", "querystring", "serde"]
categories = ["encoding", "web-programming"]

[dependencies]
serde = { version = "1" }

[dev-dependencies]
criterion = "0.3"
serde = { version = "1", features = ["derive"] }

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "struct"
harness = false

[[bench]]
name = "decoded"
harness = false

[[bench]]
name = "child"
harness = false

[[bench]]
name = "multilevel"
harness = false

[[bench]]
name = "seq"
harness = false

[profile.bench]
lto = true
