[workspace]
members = [".", "serde-querystring-actix", "serde-querystring-axum"]

[patch.crates-io]
serde-querystring = { path = "." }

[package]
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
categories = ["encoding", "web-programming"]
description = "A query string deserializer based on serde"
documentation = "https://docs.rs/serde-querystring"
edition = "2021"
keywords = ["serialization", "deserialization", "querystring", "serde"]
license = "MIT OR Apache-2.0"
name = "serde-querystring"
readme = "README.md"
repository = "https://github.com/pooyamb/serde-querystring/"
version = "0.3.0"
rust-version = "1.56"

[dependencies]
_serde = { package = "serde", version = "1.0.126", optional = true }
lexical = { version = "^7.0", optional = true, features = [
    "std",
    "parse-integers",
    "parse-floats",
], default-features = false }

[dev-dependencies]
_serde = { package = "serde", version = "1.0.126", features = ["derive"] }
serde_bytes = { version = "0.11" }

[features]
default = ["serde"]
serde = ["_serde", "lexical"]
