[package]
name = "serde-querystring-actix"
version = "0.0.7"
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
description = "A query string extractor for actix-web based on serde-querystring"
edition = "2018"
readme = "README.md"
repository = "https://github.com/pooyamb/serde-querystring/"
documentation = "https://docs.rs/serde-querystring-actix"
license = "MIT OR Apache-2.0"
keywords = ["serialization", "deserialization", "querystring", "serde", "actix"]
categories = ["encoding", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "3"
serde = "1"
derive_more = "0.99"
log = "0.4"
serde-querystring = "0.0.7"

[dev-dependencies]
actix-rt = "1"
